# 0000-Project_EOT

./: ._README.md  ._runs  .gitignore  CMakeLists.txt  README.md  main.go  requirements.txt
code/: CMakeLists.txt  main.cpp
code/lib/Steps/: ._steps.cpp
code/lib/create_arrs/: ._create_arrs.cpp
code/lib/sorts/: ._sorts.cpp
code/src/: main.cpp
doc/: ._0001-Project_EOT.docx  ._Data_Points_Over_10_Runs.xlsx  ._Project EOT.docx  ._~$Data_Points_Over_10_Runs.xlsx  0001-Project_EOT.docx  Data_Points_Over_10_Runs.xlsx  Project EOT.docx  data_2023-01-07_16-33-35.csv  data_2023-01-07_16-35-40.csv  data_2023-01-07_16-36-47.csv  data_2023-01-07_16-41-23.csv  data_2023-01-07_16-48-36.csv  data_2023-01-07_16-54-36.csv  data_2023-01-07_16-57-10.csv  data_2023-01-07_16-57-50.csv  data_2023-01-07_16-58-52.csv  data_2023-01-07_17-00-15.csv  data_2023-01-07_17-01-01.csv  data_2023-01-07_17-01-47.csv  data_2023-01-07_17-02-30.csv  data_2023-01-07_17-03-22.csv  documentation.md
lib/Steps/: steps.cpp  steps.h
lib/create_arrs/: create_arrs.cpp  create_arrs.h
lib/sorts/: sorts.cpp  sorts.h
runs/: exponential_bubble.csv  exponential_selection.csv
src/: __main__.py  app.py  app_new.py  main.cpp
video/: build.sh  scene.py
video/assets/c++/: bubble_sort.cpp
video/media/Tex/: 0fe7148c8b6df9d6.dvi  117dd32332fead81.dvi  1a23acb3a50d7484.dvi  26e46dbca79cdaf9.dvi  406078952f0dbb32.dvi  46bedfe8e2d45e85.dvi  a9e09034e2fd4c1a.dvi  bdbeccfa5d6c038d.dvi  d9e44fbea101fac6.dvi
video/media/videos/scene/1080p60/partial_movie_files/intro/: partial_movie_file_list.txt
(+2 files in other folders)
